--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <html>
-
 <head>
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,7 +10,6 @@
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/bootstrap.min.css" />
 </head>
-
 <body id="main">
   <div class="container vh-100">
     <h1 class="p-5 text-center" >SMART LOGIN</h1>
@@ -21,6 +19,13 @@
         <input type="email" placeholder="Enter your email" id="email" class="form-control my-4" oninput="checkEmail()">
         <label><i class="fa-solid fa-lock pe-2"></i>Password</label>
         <input type="password" placeholder="Enter your password" id="password" class="form-control my-4" oninput="checkPassword()">
+        <ul class="fa-ul">
+          <li class="" id="char8"><span class="fa-li mt-1"><i class="fa-solid fa-check-square"></i></span>At least 8 characters long</li>
+          <li class="" id="uppercase"><span class="fa-li mt-1"><i class="fa-solid fa-check-square"></i></span>Contains at least one uppercase letter</li>
+          <li class="" id="lowercase"><span class="fa-li mt-1"><i class="fa-solid fa-check-square"></i></span>Contains at least one lowercase letter</li>
+          <li class="" id="digit"><span class="fa-li mt-1"><i class="fa-solid fa-check-square"></i></span>Contains at least one digit</li>
+          <li class="" id="special"><span class="fa-li mt-1"><i class="fa-solid fa-check-square"></i></span>Contains at least one special character</li>
+        </ul>
         <button class="btn btn-primary form-control my-4" id="LOGINBtn" onclick = "logIn()" >LOG IN</button>
         <p>Don’t have an account? <span id="SignUP" onclick="SwitchToSingUP()" style="cursor: pointer; text-decoration: underline;" >SIGNUP</span></p>
         <div class="text-center" id="alertIN"></div>
