--- a/index.html
+++ b/index.html
@@ -13,26 +13,20 @@
 <body id="main">
   <div class="container vh-100">
     <h1 class="p-5 text-center" >SMART LOGIN</h1>
-    <div class="w-50 m-auto py-5 px-5 shadow-lg login">
-      <h3 class="mb-5 text-center">LOGIN NOW</h3>
-        <label><i class="fa-solid fa-envelope pe-2"></i> Email</label>
-        <input type="email" placeholder="Enter your email" id="email" class="form-control my-4" oninput="checkEmail()">
-        <label><i class="fa-solid fa-lock pe-2"></i>Password</label>
-        <input type="password" placeholder="Enter your password" id="password" class="form-control my-4" oninput="checkPassword()">
-        <ul class="fa-ul">
-          <li class="" id="char8"><span class="fa-li mt-1"><i class="fa-solid fa-check-square"></i></span>At least 8 characters long</li>
-          <li class="" id="uppercase"><span class="fa-li mt-1"><i class="fa-solid fa-check-square"></i></span>Contains at least one uppercase letter</li>
-          <li class="" id="lowercase"><span class="fa-li mt-1"><i class="fa-solid fa-check-square"></i></span>Contains at least one lowercase letter</li>
-          <li class="" id="digit"><span class="fa-li mt-1"><i class="fa-solid fa-check-square"></i></span>Contains at least one digit</li>
-          <li class="" id="special"><span class="fa-li mt-1"><i class="fa-solid fa-check-square"></i></span>Contains at least one special character</li>
-        </ul>
-        <button class="btn btn-primary form-control my-4" id="LOGINBtn" onclick = "logIn()" >LOG IN</button>
-        <p>Don’t have an account? <span id="SignUP" onclick="SwitchToSingUP()" style="cursor: pointer; text-decoration: underline;" >SIGNUP</span></p>
-        <div class="text-center" id="alertIN"></div>
+    <div class="row">
+      <div class=" m-auto py-5 px-5 shadow-lg login offset-lg-3 col-lg-6 col-md-8 col-sm-10">
+        <h3 class="mb-5 text-center">LOGIN NOW</h3>
+          <label><i class="fa-solid fa-envelope pe-2"></i> Email</label>
+          <input type="email" placeholder="Enter your email" id="email" class="form-control my-4" oninput="checkEmail()">
+          <label><i class="fa-solid fa-lock pe-2"></i>Password</label>
+          <input type="password" placeholder="Enter your password" id="password" class="form-control my-4" oninput="checkPassword()">
+          <button class="btn btn-primary form-control my-4" id="LOGINBtn" onclick = "logIn()" >LOG IN</button>
+          <p>Don’t have an account? <span id="SignUP" onclick="SwitchToSingUP()" style="cursor: pointer; text-decoration: underline;" >SIGNUP</span></p>
+          <div class="text-center" id="alertIN"></div>
+      </div>
     </div>
   </div>
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/main.js"></script>
 </body>
-
 </html>
